<resources>
    <string name="app_name">Visit Me</string>
    <string name="fe_name">Faculty of Engineering</string>
    <string name="major">Major</string>
    <string name="it_engineering">IT Engineering</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="dob">DoB</string>
    <string name="_01_jan_1990">01-Jan-1990</string>
    <string name="pob">PoB</string>
    <string name="sao_kimsong_rupp_edu_kh">sao.kimsong@rupp.edu.kh</string>
    <string name="_123_st_01_phnom_penh">#123, St. 01, Phnom Penh</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="phnom_penh">Phnom Penh</string>
    <string name="kimsong_sao">Kimsong SAO</string>
    <string name="sok_sao">Sok Sao</string>
    <!--Main-->
    <string name="hello_kim">Hello, Kim!</string>
    <string name="continue_to_mobile_dev_course">Continue to \nMobile Dev. Course</string>
    <string name="completed_65">65% Complete</string>
    <string name="search_hint">Search ...</string>
    <string name="popular_courses">Popular Courses</string>
    <string name="see_all">See All</string>
    <string name="software_engineering">Software Engineering</string>
    <string name="web_and_cloud_technologies">Web and Cloud Technologies</string>
    <string name="mobile_application_dev_i">Mobile Application Dev. I</string>
    <string name="explore_the_power_of_android_napplication_development">Explore the power of android \napplication development</string>
    <string name="project_practicum">Project Practicum</string>
    <string name="advanced_hands_on_course_builds_on_the_project_managers_previously_acquired">Advanced hands-on course builds on the project managers\' previously acquired...</string>
    <string name="all_courses">All Courses</string>
    <string name="email_or_username">Email or Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="new_user_register_now">New user? Register Now</string>
    <string name="or_login_with">or login with</string>
    <string name="more">More</string>
    <string name="home">Home</string>
    <string name="chat">Chat</string>
    <string name="courses">Courses</string>
    <string name="menu_home">Home</string>
    <string name="account">Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>