<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navHome"
        android:icon="@drawable/ic_home"
        android:title="@string/menu_home" />
    <item
        android:id="@+id/navCourses"
        android:icon="@drawable/ic_course_menu"
        android:title="@string/courses" />
    <item
        android:id="@+id/navChat"
        android:icon="@drawable/ic_chat_menu"
        android:title="@string/chat" />
    <item
        android:id="@+id/navAccount"
        android:icon="@drawable/ic_account_menu"
        android:title="@string/account" />
    <item
        android:id="@+id/navMore"
        android:icon="@drawable/ic_more_menu"
        android:title="@string/more" />
</menu>