<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/lvtProfileHead"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:background="@color/fe_rupp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/fe_name"
            android:padding="16dp"
            android:src="@drawable/ic_back" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:padding="16dp"
            android:src="@drawable/ic_edit" />

        <ImageView
            android:id="@+id/imgProfile"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_centerInParent="true"
            android:contentDescription="@string/fe_name"
            android:src="@drawable/ic_profile" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imgProfile"
            android:layout_centerHorizontal="true"
            android:text="@string/sok_sao"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/lvtProfileHead"
        android:orientation="vertical"
        android:padding="16dp">
        <!--Major-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/major"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/it_engineering"
                android:textAlignment="textEnd"
                android:textSize="14sp" />

        </LinearLayout>
        <!--Gender-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/gender"
                android:textSize="14sp">

            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/male"
                android:textAlignment="textEnd"
                android:textSize="14sp">

            </TextView>

        </LinearLayout>
        <!--DOB-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/dob"
                android:textSize="14sp">

            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/_01_jan_1990"
                android:textAlignment="textEnd"
                android:textSize="14sp">

            </TextView>

        </LinearLayout>
        <!--POB-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/pob"
                android:textSize="14sp">

            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/phnom_penh"
                android:textAlignment="textEnd"
                android:textSize="14sp">

            </TextView>

        </LinearLayout>
        <!--Email-->
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/email"
                android:textSize="14sp">

            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/sao_kimsong_rupp_edu_kh"
                android:textAlignment="textEnd"
                android:textSize="14sp">

            </TextView>

        </LinearLayout>
        <!--Address-->
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/address"
                android:textSize="14sp">

            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/_123_st_01_phnom_penh"
                android:textAlignment="textEnd"
                android:textSize="14sp">

            </TextView>

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>