<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:background="@color/fe_rupp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <ImageView
                android:id="@+id/imgBack"
                android:contentDescription="@string/fe_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_back"/>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <ImageView
                android:contentDescription="@string/fe_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_edit"/>
        </LinearLayout>

        <ImageView
            android:contentDescription="@string/fe_name"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:src="@drawable/ic_profile"/>

        <TextView
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kimsong_sao"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">
<!--Major-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <TextView
                android:textSize="14sp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/major"/>

            <TextView
                android:textSize="14sp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/it_engineering"
                android:textAlignment="textEnd"/>

        </LinearLayout>
        <!--Gender-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <TextView
                android:textSize="14sp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/gender">

            </TextView>

            <TextView
                android:textSize="14sp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/male"
                android:textAlignment="textEnd">

            </TextView>

        </LinearLayout>
        <!--DOB-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <TextView
                android:textSize="14sp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/dob">

            </TextView>

            <TextView
                android:textSize="14sp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/_01_jan_1990"
                android:textAlignment="textEnd">

            </TextView>

        </LinearLayout>
        <!--POB-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <TextView
                android:textSize="14sp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/pob">

            </TextView>

            <TextView
                android:textSize="14sp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/phnom_penh"
                android:textAlignment="textEnd">

            </TextView>

        </LinearLayout>
<!--Email-->
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <TextView
                android:textSize="14sp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/email">

            </TextView>

            <TextView
                android:textSize="14sp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/sao_kimsong_rupp_edu_kh"
                android:textAlignment="textEnd">

            </TextView>

        </LinearLayout>
        <!--Address-->
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <TextView
                android:textSize="14sp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/address">

            </TextView>

            <TextView
                android:textSize="14sp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/_123_st_01_phnom_penh"
                android:textAlignment="textEnd">

            </TextView>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>