<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="16dp"
            android:src="@drawable/undraw_welcome" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Login to Your Account"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <EditText
                android:id="@+id/editTextTextEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="16dp"
                android:ems="10"
                android:background="@drawable/ic_edittext_bg"
                android:hint="@string/email_or_username"
                android:inputType="textEmailAddress"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"

                android:background="@drawable/ic_edittext_bg"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textSize="14sp" />

            <Button
                android:id="@+id/buttonLogin"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/button_primary"
                android:textColor="@color/white"
                android:text="@string/login" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/new_user_register_now"
                android:textAlignment="center"
                android:textColor="@color/fe_rupp"
                android:textSize="14sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:weightSum="12">

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="5"
                    android:background="@color/fe_rupp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/or_login_with"
                    android:textAlignment="center"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="5"
                    android:background="@color/fe_rupp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginRight="16dp"
                    android:src="@drawable/google" />

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginRight="16dp"
                    android:src="@drawable/facebook" />

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginBottom="16dp"
                    android:src="@drawable/twitter" />
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

    <androidx.constraintlayout.helper.widget.Flow
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>